jpa->jdbc