@@ -10,7 +10,6 @@ import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Example;
 import org.springframework.http.MediaType;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.context.jdbc.Sql;
@@ -89,15 +88,13 @@ class MessageControllerIT extends IntegrationTest {
             .andExpect(status().isOk())
         ;
 
-        final var messages = messageRepository.findAll(Example.of(
-            new Message()
-                .setUserFrom("user1")
-                .setUserTo("user4")
-        ));
+        final var messages = messageRepository.findAll().stream()
+            .filter(m -> m.getUserFrom().equals("user1") && m.getUserTo().equals("user4"))
+            .toList();
 
         assertThat(messages, hasSize(1));
 
-        assertThat(messages.get(0).getMessageData(), is("hello there :-)"));
+        assertThat(messages.getFirst().getMessageData(), is("hello there :-)"));
 
         final var chat = userChatRepository.findUserChat("user1", "user4");
 
@@ -116,8 +113,8 @@ class MessageControllerIT extends IntegrationTest {
     void testGetUserChatInfo() throws Exception {
 
         mvc.perform(get("/api/latest/messages"))
-            .andExpect(status().isOk())
             .andDo(print())
+            .andExpect(status().isOk())
             .andExpect(content().json("""
                     [
                       {
@@ -232,8 +229,62 @@ class MessageControllerIT extends IntegrationTest {
                         "errorMessage": "Message length needs to be at least 1 character"
                       }
                     ]
-        
+
                 """));
+    }
+
+    @Test
+    @WithMockUser(username = "user1", roles = "USER")
+    void testLastMessageUpsert() throws Exception {
+        // Send first message
+        mvc.perform(post("/api/latest/messages")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content("""
+                    {
+                        "userTo": "user2",
+                        "messageData": "First message"
+                    }
+                    """)
+        ).andExpect(status().isOk());
+
+        var chat = userChatRepository.findUserChat("user1", "user2").orElseThrow();
+        var firstLastMessage = lastMessageRepository.findById(chat.getChatId()).orElseThrow();
+        var firstMessage = messageRepository.findById(firstLastMessage.getMessageId()).orElseThrow();
+        assertThat(firstMessage.getMessageData(), is("First message"));
+
+        // Send second message - should update last message
+        mvc.perform(post("/api/latest/messages")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content("""
+                    {
+                        "userTo": "user2",
+                        "messageData": "Second message"
+                    }
+                    """)
+        ).andExpect(status().isOk());
+
+        var secondLastMessage = lastMessageRepository.findById(chat.getChatId()).orElseThrow();
+        var secondMessage = messageRepository.findById(secondLastMessage.getMessageId()).orElseThrow();
+
+        // Verify last message was updated (upserted)
+        assertThat(secondMessage.getMessageData(), is("Second message"));
+        assertThat(secondMessage.getId() > firstMessage.getId(), is(true));
+    }
+
+    @Test
+    @WithMockUser(username = "user1", roles = "USER")
+    void testMarkMessagesAsDisplayed() throws Exception {
+        // Initially user1 has unread messages from user2 and user3
+        var unreadBefore = messageRepository.getUnreadMessagesCount("user1");
+        assertThat(unreadBefore, hasSize(2));
+
+        // Get chat with user2 marks ALL messages for user1 as displayed
+        mvc.perform(get("/api/latest/messages/user2"))
+            .andExpect(status().isOk());
+
+        // All messages should now be marked as displayed
+        var unreadAfter = messageRepository.getUnreadMessagesCount("user1");
+        assertThat(unreadAfter, hasSize(0));
     }
 
 
